--- a/style.css
+++ b/style.css
@@ -88,7 +88,29 @@ nav .menuButton {
   text-transform: uppercase;
   letter-spacing: 0.1em;
   font-weight: 700;
-  font-size: 15px;
+  font-size: 14px;
+  padding-top: 8px;
+  padding-bottom: 6px;
+  padding-left: 10px;
+  padding-right: 2px;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+nav .menuButton:hover {
+  background-color: #ffd633;
+  color: #555;
+  fill: #555;
+}
+
+nav .menuButton span {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+nav .menuButton svg {
+  margin-left: 5px;
 }
 
 nav img {
