switching to 7-1 sass pattern

--- a/style.scss
+++ b/style.scss
@@ -1,215 +1,10 @@
-$regularWeigth: 400;
-$mediumWeigth: 500;
-$boldWeigth: 700;
+@import 
+    'abstracts/variables',
+    'abstracts/mixins';
 
-$yellow: #ffd633;
-$black: #000;
-$white: rgb(255, 255, 255);
+@import 
+    'base/base';
 
-
-@mixin buttonReset {
-    border: none;
-    font-family: inherit;
-    background-color: transparent;
-    text-transform: uppercase;
-    letter-spacing: 0.1em;
-    font-weight: $boldWeigth;
-}
-
-@mixin linksReset {
-    text-decoration: none;
-    color: $black;
-}
-
-
-
-
-
-*, *::before, *::after {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-html {
-    font-family: 'Roboto', sans-serif;
-    background-color: $black;
-    font-size: 16px;
-    
-}
-
-nav {
-    height: 49px;
-    background-color: $white;
-    display: flex;
-    padding: 0 14px;
-    justify-content: space-between;
-    align-items: center;
-
-    svg:first-of-type {
-        
-        &:hover {
-            fill: #555;
-        }
-    }
-
-
-    .loginButton {
-        @include buttonReset();
-
-        font-size: 14px;
-        letter-spacing: 0.2em;
-        padding: 8px 10px;
-        transition: 0.4s;
-        
-
-        &:hover {
-            background-color: $yellow;
-            cursor: pointer;
-            
-        }
-
-    }
-
-    .subscribeButton {
-        @include buttonReset();
-
-        letter-spacing: 0.2em;
-        font-size: 13px;
-        display: grid;
-        place-items: center;
-        
-        a {
-            @include linksReset();
-            color: $white;
-            z-index: 3;
-            
-            
-            width: calc(100% + 40px);
-            height: calc(100% + 34px);
-            display: grid;
-            place-items: center;
-            transition: 0.2s ease-in;
-
-            &:hover {
-                color: $black;
-            }
-        
-        }
-
-        
-
-    }
-
-    .menuButton {
-        @include buttonReset();
-        font-size: 14px;
-        
-        padding-top: 8px;
-        padding-bottom: 6px;
-        padding-left: 10px;
-        padding-right: 2px;
-        transition: 0.4s;
-
-
-        &:hover {
-            background-color: $yellow;
-            color: #555;
-            fill: #555;
-        }
-
-        span {
-            display: flex;
-        }
-
-        svg {
-            margin-left: 5px;
-        }
-    }
-
-
-
-    img {
-        height: 32px;
-        width: 109px;
-    }
-
-    ul {
-        display: flex;
-        justify-content: space-between;
-        background-color: transparent;
-        
-    }
-
-    li {
-        list-style: none;
-        margin-right: 16px;
-        display: grid;
-        place-items: center;
-        background-color: transparent;
-        
-
-        &:last-of-type {
-            margin-right: 0;
-            font-weight: $mediumWeigth;
-        }
-
-        &:nth-child(4) {
-            background-color: $black;
-            padding: 17px 20px;
-            margin-bottom: 2px;
-            position: relative;
-            z-index: 2;
-            
-            &:after {
-                content: '';
-                position: absolute;
-                width: 0%;
-                height: 100%;
-                bottom: 0;
-                left: 0;
-                z-index: 1;
-                background-color: $yellow;
-                transition: 0.2s ease-in;
-                
-            }
-
-            &:hover:after {
-                width: 100%;
-            }
-        }
-    }
-
-    .renewAnchor {
-        @include linksReset();
-
-        color:$black;
-        
-        border-bottom: 2px $yellow solid;
-        font-size: 14px;
-        position: relative;
-        z-index: 3;
-       
-        
-        &:after {
-            content: '';
-            position: absolute;
-            background-color: $yellow;
-            height: 0;
-            width: 100%;
-            bottom: 0;
-            left: 0;
-            z-index: -1;
-            transition: 0.125s ease-in;
-        }
-
-        &:hover:after {
-            height: 120%;
-            
-        }
-        
-
-
-    }
-}
+@import
+    'layout/navigation';
 
