updated layout and heading section

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,7 +1,10 @@
+$lightWeigth: 300;
 $regularWeigth: 400;
 $mediumWeigth: 500;
 $boldWeigth: 700;
 
-$yellow: #ffd633;
-$black: #000;
-$white: rgb(255, 255, 255);
+$josefinFont: 'Josefin Sans', sans-serif;
+
+$yellow: hsl(48, 100%, 50%);
+$black: hsl(0, 0%, 0%);
+$white: hsl(0, 0%, 100%);
