--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -9,6 +9,10 @@
 html {
     font-family: 'Roboto', sans-serif;
     background-color: $black;
-    font-size: 16px;
+    font-size: 18px;
     
+}
+
+body {
+    height: 3000px;
 }
